# Jarvis

./: .gitignore  CMakeLists.txt  Jarvis  Jarvis.sln  Jarvis.vcxproj  Jarvis.vcxproj.filters  README.md  Server.h  main.cpp
.github/workflows/: cmake-multi-platform.yml
cfg/: contentRoutes.json  fileRoutes.json
html/: error.html  footer.html  header.html
inc/: DB.h  Database.h  JSONReader.h  Logger.h  ResponseFactory.h  Router.h  Server.h  Types.h  Util.h  Version.h  aliases.h  util.h
public/: error.html  footer.html  header.html  index.html
src/: DB.cpp  Database.cpp  JSONReader.cpp  Jarvis.cpp  Logger.cpp  ResponseFactory.cpp  Router.cpp  Server.cpp
